# stele-annotator-

./: .gitignore  ANALYSIS_REPORT.md  FILE_STRUCTURE.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
docs/: SKILL.md
docs/superpowers/plans/: 2026-03-26-stele-companion-v2-refactor.md
docs/superpowers/specs/: 2026-03-26-stele-companion-v2-refactor.md
scripts/: converter.py  stele_annotator.py  stele_companion.py  word_reader.py
scripts/data/: s2t.json  t2s.json
stele_companion/: __init__.py  cli.py  core.py  io.py  network.py  render.py  utils.py
tests/: test_integration.py
tests/fixtures/: 张迁碑.txt  张迁碑_dict.json  肥致碑.txt  肥致碑_dict.json
